Fix weird detail width on transition that was making the back button jump into two lines

--- a/content/public-drafts/when-abstractions-are-worth-it/main.css
+++ b/content/public-drafts/when-abstractions-are-worth-it/main.css
@@ -209,6 +209,7 @@
     transition: left 0.5s ease,  box-shadow 0.3s ease;
     z-index: 2;
     box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+    width: 100%;
 }
 
 .default-margin-bottom {
